# flachtex

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  FINAL_RECOMMENDATION.md  README.md  RECOMMENDATION.md  TRACEABLE_STRING_ANALYSIS.md  benchmark_traceable_string.py  main.py  pyproject.toml  setup.py  tests.py  traceable_string_improved.py
.github/workflows/: publish-to-pypi.yml  pytest.yml
examples/: example.py  example2.py
examples/document_1/: main.tex  part_a.tex  part_b.tex
flachtex/: __init__.py  __main__.py  cli.py  command_finder.py  command_substitution.py  comments.py  cycle_prevention.py  filefinder.py  fileguesser.py  filereader.py  flattened_document.py  originawarestr.py  parser.py  preprocessor.py  rule_manager.py  rules.py  traceable_string.py  tracrable_string.py  utils.py
flachtex/rules/: __init__.py  import_rules.py  skip_rules.py  substitution_rules.py
src/flachtex/: __init__.py  __main__.py  command_finder.py  command_substitution.py  comments.py  cycle_prevention.py  filefinder.py  main.py  preprocessor.py  traceable_string.py  utils.py
src/flachtex/rules/: __init__.py  import_rules.py  skip_rules.py  subimport_substiution_rules.py  substitution_rules.py
tests/: test_arxiv.py  test_command_finder.py  test_command_substitution.py  test_command_substitution_pytest.py  test_complex_documents.py  test_edge_cases.py  test_origin.py  test_rules.py  test_traceable_string.py  test_various.py  tests.py
